fix: select file dialog not showing

--- a/client/windows/MainWindow/components/InstanceContent/components/ConnectionSelectorContainer/components/Config/index.scss
+++ b/client/windows/MainWindow/components/InstanceContent/components/ConnectionSelectorContainer/components/Config/index.scss
@@ -9,7 +9,7 @@
   text-align: center;
   width: 30px;
   position: relative;
-  top: 0;
+  top: -1px;
   left: -30px;
   border-top: 0;
   border-bottom: 0;
